--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -6,7 +6,7 @@
   margin-bottom: 40px;
 }
 
-/* .main_content {
+.main_content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,7 @@
   width: 100%;
   margin: 20px;
   box-sizing: border-box;
-} */
+}
 
 .mainBlock {
   display: flex;
@@ -110,7 +110,7 @@
   stroke-dasharray: 500;
   stroke-width: 1px;
   fill: transparent;
-  stroke: #222;
+  stroke: #fff;
   animation: svgAnimation 2.5s linear infinite;
 }
 
